--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 .idea
+.mvn
+.gitignore
 
 # Eclipse m2e generated files
 # Eclipse Core
